--- a/txt.html
+++ b/txt.html
@@ -1,4 +1,4 @@
-!doctype html>
+<!doctype html>
 <html lang="ko">
  <head>
    <meta charset="utf-8">
@@ -33,5 +33,4 @@
     <p>chwippo &copy; 2020 Employment site </p>
     </footer>
    
- </body>
-</html>
+ 
